Some tweaks